fix line spacing, add videos, remove sub text

--- a/src/App.scss
+++ b/src/App.scss
@@ -134,6 +134,7 @@ video {
 		grid-area: heading;
 		align-self: center;
 		justify-self: center;
+		margin-bottom: 3rem;
 	}
 
 	.underline {
@@ -151,6 +152,7 @@ video {
 		width: 35rem;
 		align-self: start;
 		justify-self: center;
+		line-height: 26px;
 	}
 }
 
